fix(HomeHeroBlock): wasnt wrapping on small screen due to flex container

--- a/assets/css/02-tokens/_semantic.scss
+++ b/assets/css/02-tokens/_semantic.scss
@@ -29,7 +29,7 @@ html {
 	--block-gap: var(--block-gap-default);
 	--global-padding-inline: var(--space-s);
 	--layout-content-size: 60rem;
-	--layout-wide-size: 90rem;
+	--layout-wide-size: 82rem;
 	--measure: 70ch;
 	--region-space: var(--space-xl-3xl);
 
